# EDA

./: README.md
Articulos/11_R+Tree presentation Prof Xunfei Jiang/: R+ Tree.pptx
Articulos/7_PR Quadtree Visualization/: 15.3. The PR Quadtree — CS3 Data Structures & Algorithms.html
ExamenParcial/: area.cpp  eda.cpp  preg6_solucion_mia.cpp  preg7_solucion_mia.cpp  preg_7solucion_ambigua.cpp
Lab1Maldicion_dimensionalidad/: distancias_1000.csv  distancias_500.csv  distancias_5000.csv  histograma.py
Lab1Maldicion_dimensionalidad/Distancias_euclidadinas_k_dimensiones/: Distancias_euclidadinas_k_dimensiones.vcxproj.filters
Lab1_Maldicion_dimensionalidad/: Informe_Experimento_distancias_euclidianas.docx  distancias_10.csv  distancias_100.csv  distancias_2000.csv  distancias_50.csv  histograma_lab1_eda.ipynb  lab.cpp
Lab2Octree/: octree.hpp
Lab2_Octree/: CMakeLists.txt  Informe_Octree.docx  Octree_alex.cpp  Octree_alex.hpp  b.cpp  main.cpp  octree.cpp  octree.hpp  points0.csv  points2.csv
Lab2_Octree/prueba_ubuntu_grafica_opengl/: a.cpp  b.cpp  octree
Lab3_Rtree/: RTree.cpp  RTree.h  grafica_6_2_rect.txt  main.cpp  main2.cpp  main3.cpp  output_maxnode2_mbrs.txt  output_maxnode3_mbrs.txt  output_maxnodes2.txt  output_maxnodes3.txt  output_original_maxnode3.txt  plot_original_points.py  plot_rtree.py  plot_rtree_mbrs.py  script_grafica.py
Lab4_K_means_KDTree/: KDtree (2).cpp  kdtree.cpp  salida.txt
Lab4_K_means_KDTree/graphics/: main.py
pruebas/: CAVL.txt  README.md  Rstar.cpp  countRectangle.cpp  kdtree.cpp  r+func.txt  rfunc.txt  splitnodeexercise.txt
(+19 files in other folders)
